--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "sleek-dashboard": "^1.0.0-beta.5"
+    "node-localstorage": "^2.2.1",
+    "sleek-dashboard": "^1.0.0-beta.5",
+    "store2": "^2.14.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
